--- a/AR.html
+++ b/AR.html
@@ -117,11 +117,11 @@
 
                 <!-- Map point Image -->
 
-                <img id="map-point" src="images/map-navigate.jpg">     
+                <img id="map-point" src="Images/map-navigate.jpg">     
                 
                 <!-- Texture Image -->
 
-                <img id="texture" src="images/texture.jpg">
+                <img id="texture" src="Images/texture.jpg">
 
             </a-assets>
             
