--- a/AR.html
+++ b/AR.html
@@ -132,7 +132,7 @@
             <!-- Invitation Video Marker -->
 
             <a-marker id="marker1" type='pattern' url='markers/invi-pattern-marker.patt'><!-- video-vidhandler>-->
-		<a-entity gltf-model="#cityModel" modify-materials></a-entity>
+		<a-entity gltf-model="#cityModel" scale="0.1 0.1 0.1" modify-materials></a-entity>
                 <!--<a-box position='0 0 0' material='color: red;'></a-box>-->
                 <!--<a-plane scale = "4 2" position='0 0.1 0' rotation="-90 0 0" material='transparent:true;src:#invitation' controls></a-plane>-->
                 <!--<a-entity text="font: https://cdn.aframe.io/fonts/mozillavr.fnt; value: Fun Moments"></a-entity>-->
