--- a/AR.html
+++ b/AR.html
@@ -131,7 +131,7 @@
             
             <!-- Invitation Video Marker -->
 
-            <a-marker id="marker1" type='pattern' url='markers/invi-pattern-marker.patt'><!-- video-vidhandler>-->
+            <a-marker id="marker1" type='pattern' url='markers/letterA.patt'><!-- video-vidhandler>-->
 		<a-obj-model src="#objModel" scale"0.5 0.5 0.5"></a-obj-model>
 		<!--<a-entity gltf-model="#cityModel" scale="0.01 0.01 0.01" modify-materials></a-entity>-->
                 <!--<a-box position='0 0 0' material='color: red;'></a-box>-->
