--- a/AR.html
+++ b/AR.html
@@ -133,9 +133,9 @@
 
             <a-marker id="marker1" type='pattern' url='markers/letterA.patt'><!-- video-vidhandler>-->
 		<!--<a-obj-model src="#objModel" scale="0.5 0.5 0.5"></a-obj-model>-->
-		<a-entity gltf-model="#objModel" scale="1 1 1" position="0 0.1 0"></a-entity>
+		<!--<a-entity gltf-model="#objModel" scale="1 1 1" position="0 0.1 0"></a-entity>-->
 		<!--<a-entity gltf-model="#objModel" scale="1 1 1" modify-materials></a-entity>-->
-                <!--<a-box position='0 0 0' material='color: red;'></a-box>-->
+                <a-box position='0 1 0' material='color: red;'></a-box>
                 <!--<a-plane scale = "4 2" position='0 0.1 0' rotation="-90 0 0" material='transparent:true;src:#invitation' controls></a-plane>-->
                 <!--<a-entity text="font: https://cdn.aframe.io/fonts/mozillavr.fnt; value: Fun Moments"></a-entity>-->
             </a-marker>
