--- a/AR.html
+++ b/AR.html
@@ -93,7 +93,7 @@
 		        const intersectedElement = ev && ev.detail && ev.detail.intersectedEl;
 			if (imgMap && intersectedElement === imgMap) {
 			    console.log("Clicked");
-			    document.location.href = "https://goo.gl/maps/gRsth6SHo5AgwMbT7";
+			    document.location.href = "https://goo.gl/maps/tNUfzSMmDfecJ9Qv6";
 			}
 		    });
 		}
@@ -134,9 +134,9 @@
             <a-marker id="marker1" type='pattern' url='markers/letterA.patt'><!-- video-vidhandler>-->
 		<!--<a-obj-model src="#objModel" scale="0.5 0.5 0.5"></a-obj-model>-->
 		<!--<a-entity obj-model="objModel" scale="0.1 0.1 0.1" position="0 0.1 0"></a-entity>-->
-		<a-entity gltf-model="objModel" scale="0.7 0.7 0.7"></a-entity>
+		<!--<a-entity gltf-model="objModel" scale="0.7 0.7 0.7"></a-entity>-->
                 <!--<a-box position='0 1 0' material='color: red;'></a-box>-->
-                <!--<a-plane scale = "4 2" position='0 0.1 0' rotation="-90 0 0" material='transparent:true;src:#invitation' controls></a-plane>-->
+                <a-plane scale = "4 2" position='0 0.1 0' rotation="-90 0 0" material='transparent:true;src:#invitation' controls></a-plane>
                 <!--<a-entity text="font: https://cdn.aframe.io/fonts/mozillavr.fnt; value: Fun Moments"></a-entity>-->
             </a-marker>
 
