--- a/AR.html
+++ b/AR.html
@@ -135,7 +135,7 @@
 		<!--<a-obj-model src="#objModel" scale="0.5 0.5 0.5"></a-obj-model>-->
 		<!--<a-entity obj-model="obj: url(model/AR_model.obj)" scale="0.1 0.1 0.1" position="0 0.1 0"></a-entity>-->
 		<!--<a-entity gltf-model="objModel" scale="0.7 0.7 0.7"></a-entity>-->
-                <a-box position='0 1 0' material='color: red;'></a-box>
+                <a-box position='0 1 0' depth="2" height="4" width="0.5" material='color: red;'></a-box>
                 <!---plane scale = "4 2" position='0 0.1 0' rotation="-90 0 0" material='transparent:true;src:#invitation' controls></a-plane>-->
                 <!--<a-entity text="font: https://cdn.aframe.io/fonts/mozillavr.fnt; value: Fun Moments"></a-entity>-->
             </a-marker>
