--- a/AR.html
+++ b/AR.html
@@ -124,6 +124,7 @@
                 <!-- Texture Image -->
 
                 <img id="texture" src="Images/texture.jpg">
+		<img id="site" src="Images/site.png">
 
             </a-assets>
             
@@ -135,8 +136,8 @@
 		<!--<a-obj-model src="#objModel" scale="0.5 0.5 0.5"></a-obj-model>-->
 		<a-entity obj-model="obj: url(model/AR_model.obj)" scale="0.005 0.005 0.005" position="0 0.05 0"></a-entity>
 		<!--<a-entity gltf-model="objModel" scale="0.7 0.7 0.7"></a-entity>-->
-                <a-box position='0 1 0' depth="0.1" height="0.1" width="0.1" material='color: red;'></a-box>
-                <!---plane scale = "4 2" position='0 0.1 0' rotation="-90 0 0" material='transparent:true;src:#invitation' controls></a-plane>-->
+                <!--<a-box position='0 1 0' depth="0.1" height="0.1" width="0.1" material='color: red;'></a-box>-->
+                <plane scale = "4 2" position='0 0 0' rotation="-90 0 0" material='transparent:true;src:#site' controls></a-plane>
                 <!--<a-entity text="font: https://cdn.aframe.io/fonts/mozillavr.fnt; value: Fun Moments"></a-entity>-->
             </a-marker>
 
