--- a/AR.html
+++ b/AR.html
@@ -124,7 +124,7 @@
                 <!-- Texture Image -->
 
                 <img id="texture" src="Images/texture.jpg">
-		<img id="site" src="Images/site.png">
+		<img id="site" src="Images/site.jpg">
 
             </a-assets>
             
