--- a/AR.html
+++ b/AR.html
@@ -140,10 +140,10 @@
 		<!--<a-entity gltf-model="objModel" scale="0.7 0.7 0.7"></a-entity>-->
                 <!--<a-box position='0 1 0' depth="0.1" height="0.1" width="0.1" material='color: red;'></a-box>-->
                 <a-plane scale = "2.1 2.1" position='0 0.04 0' rotation="-90 0 0" material='transparent:true;src:#site'></a-plane>
-		<a-curve id='track1'>
+		<!--<a-curve id='track1'>
 			<a-curve-point position="1 0.5 0"></a-curve-point>
 			<a-curve-point position="-1 0.5 0"></a-curve-point>
-	   	</a-curve>
+	   	</a-curve>-->
 		<!--<a-draw-curve curveref='#track1' material='shader:line; color: blue;'></a-draw-curve>-->
                 <!--<a-entity text="font: https://cdn.aframe.io/fonts/mozillavr.fnt; value: Fun Moments"></a-entity>-->
             </a-marker>
