--- a/AR.html
+++ b/AR.html
@@ -12,7 +12,7 @@
         <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
         <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.5/aframe/build/aframe-ar.js"></script>
 	    
-	<script src="https://rawgit.com/aframevr/aframe/master/dist/aframe-master.min.js"></script>
+	<!--<script src="https://rawgit.com/aframevr/aframe/master/dist/aframe-master.min.js"></script>-->
 	<script src="https://unpkg.com/aframe-curve-component/dist/aframe-curve-component.min.js"></script>
 
         <script>
