--- a/AR.html
+++ b/AR.html
@@ -136,7 +136,7 @@
 
             <a-marker id="marker1" type='pattern' url='markers/letterA.patt'><!-- video-vidhandler>-->
 		<!--<a-obj-model src="#objModel" scale="0.5 0.5 0.5"></a-obj-model>-->
-		<a-entity obj-model="obj: url(model/model5_0.obj)" scale="0.005 0.005 0.005" position="0 0.01 0"></a-entity>
+		<a-entity obj-model="obj: url(model/model5_0.obj)" scale="0.005 0.005 0.005" position="0 0.01 0" rotation="0 90 0"></a-entity>
 		<!--<a-entity gltf-model="objModel" scale="0.7 0.7 0.7"></a-entity>-->
                 <!--<a-box position='0 1 0' depth="0.1" height="0.1" width="0.1" material='color: red;'></a-box>-->
                 <a-plane scale = "2.1 2.1" position='0 0.01 0' rotation="-90 0 0" material='transparent:true;src:#site'></a-plane>
