--- a/AR.html
+++ b/AR.html
@@ -105,7 +105,7 @@
         </script>
 	<script>
 	var draw = document.createElement('a-draw-curve');
-	draw.innerHTML = 'curveref='#track1' material='shader:line; color: red;'
+	draw.innerHTML = "curveref='#track1' material='shader:line; color: red;"
 	document.getElementById('marker1').appendChild(draw)
 	</script>
     </head>
