--- a/AR.html
+++ b/AR.html
@@ -106,7 +106,7 @@
 	<script>
 	var draw = document.createElement('a-draw-curve');
 	draw.innerHTML = "curveref='#track1' material='shader:line; color: red;"
-	document.getElementById('marker1').appendChild(draw)
+	document.body.appendChild(draw)
 	</script>
     </head>
     <body>
