--- a/AR.html
+++ b/AR.html
@@ -156,8 +156,8 @@
 		
 		<script>
 			var draw = document.createElement('a-draw-curve');
-			draw.innerHTML = "curveref='#track1' material='shader:line; color: red;"
-			document.body.appendChild(draw)
+			draw.innerHTML = "curveref='#track1' material='shader:line; color: red;";
+			document.body.appendChild(draw);
 		</script>
 		
 		<!--<a-draw-curve curveref='#track1' material='shader:line; color: blue;'></a-draw-curve>-->
